--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
-site_name: 精东影业-精东影视app传媒制作公司
-site_author: 精东影业
-site_description: 精东影业是一家专注于影视制作与发行的精东影视传媒制作公司，精东影视app致力于为用户提供优质的影视内容。其官方网站汇集了丰富的电影、电视剧、综艺等资源，支持在线观看与高清下载。网站界面简洁，分类清晰，涵盖最新热播剧集、经典影片推荐及独家原创内容，满足不同用户的观影需求。同时提供会员服务，享受无广告、蓝光画质等特权，打造沉浸式观影体验。
+site_name: 国产精品免费看久久久无码_无人在线视频高清免费观看_国产日韩久久免费影院_日韩高清ä在线观看视频_久久亚洲äv无码精品色午夜麻豆
+site_author: 国产精品免费看久久久无码
+site_description: 国产精品免费看久久久无码光影之选｜严选全球高分影视作品，4K杜比双认证播放，专业级内容解读，打造无广告沉浸式观影体验
 theme:
   name: readthedocs
 nav:
